[ADD] Listar clientes, Buscar Cliente por id

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
             <h1>Administrador de turnos</h1>
             <nav>
                 <ul>
-                    <li class="active">Turnos</li>
-                    <li>Clientes</li>
+                    <li>Turnos</li>
+                    <li class="active">Clientes</li>
                 </ul>
             </nav>
         </header>
         <main>
-            <section id="turnos">
-            </section>
+            <button class="btn">Registrar Cliente</button>
+            <section id="turnos" class="d-none"></section>
             <section id="clientes">
             </section>
         </main>
