--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <title>Administrador de turnos - Peluqueria</title>
+        <link rel="shortcut icon" href="#">
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="style.css" />
-        <title>Administrador de turnos - Peluqueria</title>
+        <script type="module" src="./functions/index.js" defer></script>
     </head>
     <body>
         <header>
@@ -40,17 +42,20 @@
             <section id="clientes" class="d-none">
                 <div id="registrarCliente" class="d-none">
                     <h2>Registrando cliente</h2>
-                    <form id="clientesForm" action="">
+                    <form id="clientesForm" action="" class="form">
                         <label for="nombre">Nombre:</label>
                         <input type="text" id="nombre" class="inputForm" />
                         <label for="apellido">Apellido:</label>
                         <input type="text" id="apellido" class="inputForm" />
                         <label for="telefono">Teléfono:</label>
                         <input type="text" id="telefono" class="inputForm" />
+                        <div class="btn-container">
+                            <input type="submit" id="guardarClienteBtn" class="btn" value="GUARDAR"/>
+                            <button id="cancelarClienteBtn" class="btn">CANCELAR</button>
+                        </div>
                     </form>
                 </div>
             </section>
         </main>
-        <script type="module" src="./functionalities/index.js"></script>
     </body>
 </html>
