Fix clientes post edición. Reorganización de código. Mejora de maquetado. Tooltip en nombres largos

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="style.css" />
+        <script src="https://kit.fontawesome.com/1cc9cf3772.js" crossorigin="anonymous" defer></script>
         <script type="module" src="./functions/index.js" defer></script>
     </head>
     <body>
@@ -42,20 +43,9 @@
             <section id="clientes" class="d-none">
                 <div id="registrarCliente" class="d-none">
                     <h2>Registrando cliente</h2>
-                    <form id="clientesForm" action="" class="form">
-                        <label for="nombre">Nombre:</label>
-                        <input type="text" id="nombre" class="inputForm" />
-                        <label for="apellido">Apellido:</label>
-                        <input type="text" id="apellido" class="inputForm" />
-                        <label for="telefono">Teléfono:</label>
-                        <input type="text" id="telefono" class="inputForm" />
-                        <div class="btn-container">
-                            <input type="submit" id="guardarClienteBtn" class="btn" value="GUARDAR"/>
-                            <button id="cancelarClienteBtn" class="btn">CANCELAR</button>
-                        </div>
-                    </form>
                 </div>
             </section>
         </main>
+        <footer>void_oli &copy; 2023</footer>
     </body>
 </html>
